Studio: Ensure that correct LAF is used on Linux.  Also fixes some issues with settings colors ini our night-day code.